migration-result/docs/ver/13.x/access-controls/getting-started.mdx
---
title: Getting Started With Access Controls
description: Get started using Teleport Access Controls.
version: '13.x'
---

In Teleport, any local, SSO, or robot user can be assigned one or several roles.
Roles govern access to databases, SSH servers, Kubernetes clusters, Windows
desktops, and web apps.

We will start with local users and preset roles, assign roles to SSO users, and
wrap up with creating your own role.

## Prerequisites

<Tabs>
  <Tab title="Teleport Community Edition">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/docs/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.4.16.

      ```code
      $ tctl version
      # Teleport v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```

      See [Installation](/docs/ver/13.x/installation) for details.

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport v13.4.16 go1.21
      
    $ tsh version
    # Teleport v13.4.16 go1.21
    ```
  </Tab>

  <Tab title="Teleport Team">
    - A Teleport Team account. If you don't have an account, sign
      up to begin your [free trial](https://goteleport.com/signup/).

    - The Enterprise `tctl` admin tool and `tsh` client tool, version >= 14.3.6.

      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

    To check version information, run the `tctl version` and `tsh version` commands.
    For example:

    ```code
    $ tctl version
    # Teleport Enterprise v14.3.6 go1.21
      
    $ tsh version
    # Teleport v14.3.6 go1.21
    ```
  </Tab>

  <Tab title="Teleport Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/docs/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >=
      13.4.16, which you can download by visiting your [Teleport
      account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 14.3.6.
      You can download these tools from the [Cloud Downloads page](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads).

      ```code
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>
</Tabs>

- Make sure you can connect to your Teleport cluster by authenticating with `tsh`
  so you can execute commands with the `tctl` admin tool:
  <Tabs>
    <Tab title="Self-Hosted">
      ```code
      $ tsh login --proxy=teleport.example.com --user=email@example.com
      $ tctl status
      # Cluster  teleport.example.com
      # Version  13.4.16
      # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
      ```

      You can run subsequent `tctl` commands in this guide on your local machine.

      For full privileges, you can also run `tctl` commands on your Teleport Auth
      Service host.
    </Tab>

    <Tab title="Teleport Cloud">
      ```code
      $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
      $ tctl status
      # Cluster  myinstance.teleport.sh
      # Version  14.3.6
      # CA pin   sha256:sha-hash-here
      ```

      You must run subsequent `tctl` commands in this guide on your local machine.
    </Tab>
  </Tabs>

<Accordion title="Best practices for production security">
  When running Teleport in production, we recommend that you follow the
  practices below to avoid security incidents. These practices may differ from
  the examples used in this guide, which are intended for demo environments:

  - Avoid using `sudo` in production environments unless it's necessary.
  - Create new, non-root, users and use test instances for experimenting with Teleport.
  - Run Teleport's services as a non-root user unless required. Only the SSH
    Service requires root access. Note that you will need root permissions (or
    the `CAP_NET_BIND_SERVICE` capability) to make Teleport listen on a port
    numbered \< `1024` (e.g. `443`).
  - Follow the "Principle of Least Privilege" (PoLP). Don't give users
    permissive roles when giving them more restrictive roles will do instead.
    For example, don't assign users the built-in `access,editor` roles, which give
    them permissions to access and edit all cluster resources. Instead, define
    RBAC roles with the minimum required permissions for each user and configure
    Access Requests for elevated permissions.
  - When joining a Teleport resource service (e.g., the Database Service or
    Application Service) to a cluster, save the invitation token to a file.
    Otherwise, the token will be visible when examining the `teleport` command
    that started the agent, e.g., via the `history` command on a compromised
    system.
</Accordion>

## Step 1/3. Add local users with preset roles

Teleport provides several preset roles: `editor`, `auditor`, and `access`.

- The `editor` role authorizes users to modify cluster configuration.
- The `auditor` role authorizes users to view audit logs.
- The `access` role authorizes users to access cluster resources.

<Accordion title="Enterprise built in roles">
  Teleport Enterprise contains two additional preset roles: `reviewer` and `requester`.

  - The `reviewer` role authorizes users to review Access Requests.
  - The `requester` role authorizes users to request resources.
</Accordion>

<Tabs>
  <Tab title="Teleport Community Edition">
    Invite the local user Alice as cluster `editor`:

    ```code
    $ tctl users add alice --roles=editor
    ```
  </Tab>

  <Tab title="Commercial">
    Invite the local user Alice as cluster `editor` and `reviewer`:

    ```code
    $ tctl users add alice --roles=editor,reviewer
    ```
  </Tab>
</Tabs>

Once Alice signs up, she will be able to edit cluster configuration. You can list
users and their roles using `tctl users ls`.

<Tabs>
  <Tab title="Teleport Community Edition">
    ```code
    $ tctl users ls

    # User                 Roles
    # -------------------- --------------
    # alice                editor
    ```
  </Tab>

  <Tab title="Commercial">
    ```code
    $ tctl users ls

    # User                 Roles
    # -------------------- --------------
    # alice                editor, reviewer
    ```
  </Tab>
</Tabs>

You can update the user's roles using the `tctl users update` command:

<Tabs>
  <Tab title="Teleport Community Edition">
    ```code
    # Once Alice logs back in, she will be able to view audit logs
    $ tctl users update alice --set-roles=editor,auditor
    ```
  </Tab>

  <Tab title="Commercial">
    ```code
    # Once Alice logs back in, she will be able to view audit logs
    $ tctl users update alice --set-roles=editor,reviewer,auditor
    ```
  </Tab>
</Tabs>

Because Alice has two or more roles, permissions from those roles create a union. She
will be able to act as a system administrator and auditor at the same time.

## Step 2/3. Map SSO users to roles

Next, follow the instructions to set up an authentication connector that maps
users within your SSO solution to Teleport roles.

<Tabs>
  <Tab title="Teleport Community Edition">
    Save the file below as `github.yaml` and update the fields. You will need to
    set up a
    [GitHub OAuth 2.0 Connector](https://developer.github.com/apps/building-oauth-apps/creating-an-oauth-app/)
    app. Any member belonging to the GitHub organization `octocats` and on team
    `admin` will be able to assume the built-in role `access`.

    ```yaml
    kind: github
    version: v3
    metadata:
      # connector name that will be used with `tsh --auth=github login`
      name: github
    spec:
      # client ID of GitHub OAuth app
      client_id: client-id
      # client secret of GitHub OAuth app
      client_secret: client-secret
      # This name will be shown on UI login screen
      display: GitHub
      # Change tele.example.com to your domain name
      redirect_url: https://tele.example.com:443/v1/webapi/github/callback
      # Map github teams to teleport roles
      teams_to_roles:
        - organization: octocats # GitHub organization name
          team: admin            # GitHub team name within that organization
          # map github admin team to Teleport's "access" role
          roles: ["access"]
    ```

    Create the `github` resource:

    ```code
    $ tctl create github.yaml
    ```
  </Tab>

  <Tab title="Commercial Editions">
    Create a SAML or OIDC application that Teleport can integrate with, then
    create an authentication connector that maps users within your application to
    Teleport roles.

    <Tabs>
      <Tab title="SAML">
        Follow our [SAML Okta Guide](/docs/ver/13.x/access-controls/sso/okta) to
        create a SAML application.

        Save the file below as `okta.yaml` and update the `acs` field.
        Any member in Okta group `okta-admin` will assume a built-in role `admin`.

        ```yaml
        kind: saml
        version: v2
        metadata:
          name: okta
        spec:
          acs: https://tele.example.com/v1/webapi/saml/acs
          attributes_to_roles:
          - {name: "groups", value: "okta-admin", roles: ["access"]}
          entity_descriptor: |
            <?xml !!! Make sure to shift all lines in XML descriptor
            with 4 spaces, otherwise things will not work
        ```

        Create the `saml` resource:

        ```code
        $ tctl create okta.yaml
        ```
      </Tab>

      <Tab title="OIDC">
        Follow our [OIDC guides](/docs/ver/13.x/access-controls/sso/oidc#identity-providers) to
        create an OIDC application.

        Copy the YAML below to a file called `oidc.yaml` and edit the information to
        include the details of your OIDC application.

        ```yaml
        kind: oidc
        metadata:
          name: oidc_connector
        spec:
          claims_to_roles:
          - claim: groups
            roles:
            - access
            value: users
          - claim: groups
            roles:
            - editor
            value: admins
          client_id: <CLIENT-NAME>
          client_secret: <CLIENT-SECRET>
          issuer_url: https://idp.example.com/
          redirect_url: https://mytenant.teleport.sh:443/v1/webapi/oidc/callback
          max_age: 24h
        version: v3

        ```

        Create the `oidc` resource:

        ```code
        $ tctl create okta.yaml
        ```
      </Tab>
    </Tabs>
  </Tab>
</Tabs>

## Step 3/3. Create a custom role

Let's create a custom role for interns. Interns will have access
to test or staging SSH servers as `readonly` users. We will let them
view some monitoring web applications and dev kubernetes cluster.

Save this role as `interns.yaml`:

```yaml
kind: role
version: v6
metadata:
  name: interns
spec:
  allow:
    # Logins configures SSH login principals
    logins: ['readonly']
    # Assigns users with this role to the built-in Kubernetes group "view"
    kubernetes_groups: ["view"]
    # Allow access to SSH nodes, Kubernetes clusters, apps or databases
    # labeled with "staging" or "test"
    node_labels:
      'env': ['staging', 'test']
    kubernetes_labels:
      'env': 'dev'
    kubernetes_resources:
      - kind: pod
        namespace: "*"
        name: "*"
    app_labels:
      'type': ['monitoring']
  # The deny rules always override allow rules.
  deny:
    # deny access to any Node, database, app or Kubernetes cluster labeled
    # as prod as any user.
    node_labels:
      'env': 'prod'
    kubernetes_labels:
      'env': 'prod'
    kubernetes_resources:
      - kind: pod
        namespace: "prod"
        name: "*"
    db_labels:
      'env': 'prod'
    app_labels:
      'env': 'prod'
```

Create a role using the `tctl create -f` command:

```code
$ tctl create -f /tmp/interns.yaml
# Get a list of all roles in the system
$ tctl get roles --format text
```

## Next steps

- [Mapping SSO and local users traits with role templates](/docs/ver/13.x/access-controls/guides/role-templates)
- [Create certs for CI/CD using impersonation](/docs/ver/13.x/access-controls/guides/impersonation)
